# Ecom

./: Dockerfile  README  docker-compose.yml  makefile  pyproject.toml
server/form_templates/: apps.py  models.py  urls.py  utils.py  views.py
server/form_templates/management/commands/: load_templates.py
server/form_templates/migrations/: 0001_initial.py
server/myproject/: settings.py  urls.py
