[tool.poetry]
name = "test-ecom"
version = "0.1.0"
description = ""
authors = ["Kane"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.1.12"
djongo = "1.3.7"
pymongo = "3.11.4"
sqlparse = "0.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
